# insurance-quotes-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
resources/: quotes.csv
src/: helpers.py  pib-group-solution.ipynb  taxi-insurance-quotes-prediction.ipynb
src/app/: main.py
